<resources>
    <string name="app_name">Demo1</string>
    <string name="name_hung"><u>Nguyen Ngoc Hung</u></string>
    <string name="secured">Secured connection</string>
    <string name="please">Please sign in:</string>
    <string name="hintuser">Username</string>
    <string name="hintpass">Password</string>
    <string name="register">Register / New User</string>
    <string name="forgot">Forgot your password</string>
    <string name="license"> License Agreement</string>
    <string name="registeruser">Register</string>
    <string name="next">NEXT</string>

    <string name="fistname">Fist Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone number</string>
    <string name="birdthday">Birthdday</string>
    <string name="gender">Gender</string>

    <string name="favouvite">Favouvite colors</string>
    <string name="country">Country</string>
    <string name="bio">Bio</string>

    <string name="s15">15dp</string>
    <string name="s30">30dp</string>

    <string name="imagenull">Image is invalid</string>

    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>

    <string name="myprofile">My Profile</string>
    <string name="save">Save</string>
    <string name="username">Username</string>

    <string name="background">Background</string>
    <string name="back">Back</string>
    <string name="documents">Documents</string>
    <string name="history">History</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="married">Married</string>

    <string name="qn">Nhìn chung, điều kiện tự nhiên của Quảng Nam (thời tiết-khí hậu, địa hình, tài nguyên nước, biển) có nhiều thuận lợi, tiềm năng cho phát triển sự nghiệp văn hóa đa dạng, độc đáo (phát triển những tiểu vùng văn hóa), phát triển ngành du lịch (du lịch văn hóa, du lịch sinh thái). Nhìn chung, điều kiện tự nhiên của Quảng Nam (thời tiết-khí hậu, địa hình, tài nguyên nước, biển) có nhiều thuận lợi, tiềm năng cho phát triển sự nghiệp văn hóa đa dạng, độc đáo (phát triển những tiểu vùng văn hóa), phát triển ngành du lịch (du lịch văn hóa, du lịch sinh thái).Nhìn chung, điều kiện tự nhiên của Quảng Nam (thời tiết-khí hậu, địa hình, tài nguyên nước, biển) có nhiều thuận lợi, tiềm năng cho phát triển sự nghiệp văn hóa đa dạng, độc đáo (phát triển những tiểu vùng văn hóa), phát triển ngành du lịch (du lịch văn hóa, du lịch sinh thái).Nhìn chung, điều kiện tự nhiên của Quảng Nam (thời tiết-khí hậu, địa hình, tài nguyên nước, biển) có nhiều thuận lợi, tiềm năng cho phát triển sự nghiệp văn hóa đa dạng, độc đáo (phát triển những tiểu vùng văn hóa), phát triển ngành du lịch (du lịch văn hóa, du lịch sinh thái).Nhìn chung, điều kiện tự nhiên của Quảng Nam (thời tiết-khí hậu, địa hình, tài nguyên nước, biển) có nhiều thuận lợi, tiềm năng cho phát triển sự nghiệp văn hóa đa dạng, độc đáo (phát triển những tiểu vùng văn hóa), phát triển ngành du lịch (du lịch văn hóa, du lịch sinh thái).</string>
    <string name="onclcik">Honda (là nhà sản xuất động cơ lớn nhất thế giới có trụ sở tại Tokyo, Nhật Bản. với số lượng hơn 14 triệu chiếc mỗi năm. Từ năm 2004 hãng bắt đầu chế tạo động cơ chạy diesel vừa êm vừa không cần bộ lọc nhằm đáp ứng tiêu chuẩn ô nhiễm. Tuy nhiên, có thể nói rằng, nền tảng tạo nên sự hành công của công ty này là từ làm xe máy.<a href="http://www.honda.co.jp">http://www.honda.co.jp</a> Honda (là nhà sản xuất động cơ lớn nhất thế giới có trụ sở tại Tokyo, Nhật Bản. với số lượng hơn 14 triệu chiếc mỗi năm. Từ năm 2004 hãng bắt đầu chế tạo động cơ chạy diesel vừa êm vừa không cần bộ lọc nhằm đáp ứng tiêu chuẩn ô nhiễm. Tuy nhiên, có thể nói rằng, nền tảng tạo nên sự hành công của công ty này là từ làm xe máy.<a href="http://www.honda.co.jp">http://www.honda.co.jp</a> Honda (là nhà sản xuất động cơ lớn nhất thế giới có trụ sở tại Tokyo, Nhật Bản. với số lượng hơn 14 triệu chiếc mỗi năm. Từ năm 2004 hãng bắt đầu chế tạo động cơ chạy diesel vừa êm vừa không cần bộ lọc nhằm đáp ứng tiêu chuẩn ô nhiễm. Tuy nhiên, có thể nói rằng, nền tảng tạo nên sự hành công của công ty này là từ làm xe máy.<a href="http://www.honda.co.jp">http://www.honda.co.jp</a></string>
    <string name="Story1">Story1</string>
    <string name="Story2">Story2</string>
    <string name="Story3">Story3</string>

    <string name="description_format">%1$s\n\n%2$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_act_siling_meu2">ActSilingMeu2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="user_name">Pawan Deshpnde</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel </string>

    <string name="hello">Sample Android Design Support Library App</string>

    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snackbar">Snackbar</string>
    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>
    <string name="title_activity_act_load_more_api">ActLoadMoreAPI</string>

    <string name="nonetwork">We could not detect an internet connection. Please press refresh when you have internet again</string>
</resources>
