<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.company.qts.demo1.ActNewUser"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@drawable/topandbot">
        <ImageView
            android:id="@+id/bt_arrow"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/img_arrow"/>
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registeruser"
            android:textSize="30dp"
            android:textColor="#ffff"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edt_fistname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_register"
            android:textColor="@color/edtRegister"
            android:hint="@string/fistname"
            android:textColorHint="@color/edtRegister"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_register"
            android:textColor="@color/edtRegister"
            android:hint="@string/lastname"
            android:textColorHint="@color/edtRegister"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_register"
            android:textColor="@color/edtRegister"
            android:hint="@string/email"
            android:textColorHint="@color/edtRegister"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_register"
            android:textColor="@color/edtRegister"
            android:hint="@string/hintuser"
            android:textColorHint="@color/edtRegister"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/edt_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_register"
            android:textColor="@color/edtRegister"
            android:hint="@string/phonenumber"
            android:textColorHint="@color/edtRegister"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:inputType="number"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/sp_gender"
            android:background="@drawable/edt_register"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/sp_birthday"
            android:background="@drawable/edt_register"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <Button
            android:id="@+id/bt_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/topandbot"
            android:text="@string/next"
            android:textColor="#054515"
            android:textSize="30dp"/>
    </LinearLayout>
</LinearLayout>
