<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#116320">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center">

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pb_login"
            android:max="100"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/img_logotop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_logo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/linear_custom"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lock"
            android:gravity="center"
            android:text="@string/secured"
            android:textColor="#ffff"
            android:textSize="14dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/please"
            android:textColor="#ffff"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edtlogin"
            android:hint="@string/hintuser"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="7dp"
            android:textColor="#ffff"
            android:textColorHint="#ffff" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edtlogin"
            android:hint="@string/hintpass"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="7dp"
            android:textColor="#ffff"
            android:textColorHint="#ffff" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_edtlogin"
            android:text="submit"
            android:textColor="#054515" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_fb" />

            <ImageView
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_ig" />

            <ImageView
                android:id="@+id/imageButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/btn_gplus" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_register"
            android:drawablePadding="5dp"
            android:gravity="left"
            android:layout_width="200dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow"
            android:text="@string/register"
            android:textSize="16dp"
            android:textColor="#ffff"/>
        <TextView
            android:drawablePadding="5dp"
            android:gravity="left"
            android:layout_margin="5dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow"
            android:text="@string/forgot"
            android:textSize="16dp"
            android:textColor="#ffff"/>
        <TextView
            android:drawablePadding="5dp"
            android:gravity="left"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_arrow"
            android:text="@string/license"
            android:textSize="16dp"
            android:textColor="#ffff"/>
    </LinearLayout>
</LinearLayout>
