<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActCustomProfile"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@drawable/topandbot">
        <ImageView
            android:id="@+id/img_arrow"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/img_arrow" />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Custom Profile"
            android:textSize="30dp"
            android:textColor="#ffff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/img_user"
            android:src="@drawable/customimage"
            android:layout_margin="20dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/s15"/>
        <TextView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_hung"
            android:textSize="@dimen/s20"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/s15"/>
            <TextView
                android:id="@+id/tv_numberphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0905xxxxxxx"
                android:textSize="@dimen/s20"
                android:layout_margin="10dp"
                android:textColor="#2b4ad9"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s15"
                android:text="@string/age"
                android:layout_margin="10dp"/>
            <SeekBar

                android:id="@+id/sb_age"
                android:layout_width="200dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:max="100"/>
            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s15"
                android:text="0/100"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/s15"
                android:text="@string/married"
                android:layout_margin="10dp"
                android:layout_gravity="left"/>
            <Switch
                android:id="@+id/sw_married"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
