<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActNewUser1"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@drawable/topandbot">
        <ImageView
            android:id="@+id/bt_arrow1"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/img_arrow"/>
        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registeruser"
            android:textSize="30dp"
            android:textColor="#ffff"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/edt_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favouvite"
            android:textColor="@color/edtRegister"
            android:background="@drawable/edt_register"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbred"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp"
            android:textColor="@color/edtRegister"
            android:checked="false"
            android:text="Red"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbblue"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp"
            android:textColor="@color/edtRegister"
            android:checked="false"
            android:text="Blue"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbgreen"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20dp"
            android:textColor="@color/edtRegister"
            android:checked="false"
            android:text="Green"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/edtRegister"
            android:background="@drawable/edt_register"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Viet Nam"
                android:id="@+id/rdobt_vietnam"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="20dp"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rdobt_other"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="20dp"
                android:text="Other"
                android:checked="false" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textColor="@color/edtRegister"
            android:background="@drawable/edt_register"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20dp"/>
        <EditText
            android:id="@+id/ed_bio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/edtRegister"
            android:background="@drawable/edt_register"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textSize="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="top"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4">
        <Button
            android:id="@+id/bt_next1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/topandbot"
            android:text="@string/next"
            android:textColor="#054515"
            android:textSize="30dp"/>
    </LinearLayout>
</LinearLayout>
