<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActNewContacts"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:background="@drawable/topandbot">
        <ImageView
            android:id="@+id/img_arrow"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/img_arrow" />
        <TextView
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="New Contacts"
            android:textSize="30dp"
            android:textColor="#ffff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/img_user"
            android:src="@drawable/customimage"
            android:layout_margin="20dp"/>
        <EditText
            android:id="@+id/edt_fistname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register"
            android:hint="@string/fistname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/edtRegister"
            android:textColorHint="@color/edtRegister"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register"
            android:hint="@string/lastname"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/edtRegister"
            android:textColorHint="@color/edtRegister"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/edt_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register"
            android:hint="@string/phonenumber"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/edtRegister"
            android:textColorHint="@color/edtRegister"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_birthday"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edt_register"
            android:drawableRight="@drawable/ic_dropdown"
            android:hint="@string/birdthday"
            android:padding="10dp"
            android:textColor="@color/edtRegister"
            android:textColorHint="@color/edtRegister"
            android:textSize="20dp" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="center">
        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/custombtsave"/>
    </LinearLayout>
</LinearLayout>
